// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CommentInfos /> should render correctly 1`] = `
<div
  className="opinion__user"
>
  <UserLink
    className=""
    user={
      Object {
        "displayName": "Pipoudou",
        "url": "https://aa.com/",
      }
    }
  />
   
  <ForwardRef(Relay(CommentDate))
    comment={
      Object {
        "$fragmentRefs": null,
        "$refType": null,
        "author": Object {
          "displayName": "Pipoudou",
          "url": "https://aa.com/",
        },
        "authorName": "Poupidou",
        "pinned": false,
      }
    }
  />
  <PinnedLabel
    show={false}
    type="comment"
  />
  <ForwardRef(Relay(Connect(UnpublishedLabel)))
    publishable={
      Object {
        "$fragmentRefs": null,
        "$refType": null,
        "author": Object {
          "displayName": "Pipoudou",
          "url": "https://aa.com/",
        },
        "authorName": "Poupidou",
        "pinned": false,
      }
    }
  />
</div>
`;

exports[`<CommentInfos /> should render correctly with no author 1`] = `
<div
  className="opinion__user"
>
  <span>
    Poupidou
  </span>
   
  <ForwardRef(Relay(CommentDate))
    comment={
      Object {
        "$fragmentRefs": null,
        "$refType": null,
        "author": null,
        "authorName": "Poupidou",
        "pinned": false,
      }
    }
  />
  <PinnedLabel
    show={false}
    type="comment"
  />
  <ForwardRef(Relay(Connect(UnpublishedLabel)))
    publishable={
      Object {
        "$fragmentRefs": null,
        "$refType": null,
        "author": null,
        "authorName": "Poupidou",
        "pinned": false,
      }
    }
  />
</div>
`;
